<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        tools:context=".ui.screens.auth.SignupFragment">

    <include layout="@layout/toolbar_signup" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="32dp">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:scrollbarStyle="outsideOverlay"
                android:layout_weight="1">
            <LinearLayout
                    android:id="@+id/sign_up_input_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                <EditText
                        android:id="@+id/sign_up_input_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_marginBottom="16dp"
                        style="@style/CustomEditText"/>

                <EditText
                        android:id="@+id/sign_up_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:layout_marginBottom="16dp"
                        style="@style/CustomEditText"/>

                <EditText
                        android:id="@+id/sign_up_input_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/birthday"
                        android:inputType="text"
                        android:maxLines="1"
                        android:layout_marginBottom="16dp"
                        android:clickable="true"
                        android:focusable="true"
                        android:focusableInTouchMode="false"
                        style="@style/CustomEditText"/>

                <EditText
                        android:id="@+id/sign_up_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:layout_marginBottom="16dp"
                        style="@style/CustomEditText"/>

                <EditText
                        android:id="@+id/sign_up_input_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        style="@style/CustomEditText"/>

            </LinearLayout>
        </ScrollView>

        <Button
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_confirm"
                android:layout_marginTop="16dp"
                style="@style/CustomButton"/>

    </LinearLayout>
</LinearLayout>