...
    <string name="sign_up_confirm">Sign Up</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="birthday">birthday</string>
    <string name="confirm_password">confirm password</string>
    <string name="login_error">Unable to log in: %s</string>
    <string name="non_equal_passwords">Passwords are note equal</string>
    <string name="sign_up_error">Unable to sign up: %s</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="sign_in_vk_failure">Failed to Sign In with VK</string>
    <string name="sign_in_google_failure">Failed to Sign In with Google</string>

    <!-- Main menu -->
...
